change some small things

--- a/lab1/class-assignment/lab1-class.ipynb
+++ b/lab1/class-assignment/lab1-class.ipynb
@@ -12,9 +12,9 @@
     "The following concepts will be introduced in this lab:\n",
     "\n",
     "* [Variables and assignment](#vars)\n",
+    "* [Strings](#string)\n",
     "* [Conditionals and boolean logic](#conbo)\n",
     "* [Indentation](#indent)\n",
-    "* [Strings](#string)\n",
     "* [Lists and sets](#lists)\n",
     "* [Indexing, slicing, and dicing](#slicedice)\n",
     "* [Functions](#fun)\n",
@@ -56,13 +56,13 @@
     "    \n",
     "Try out some calculations on the cell below. Write the expression you want to evaluate and press `Ctrl + Enter` to execute. You should see something like this:\n",
     "\n",
-    "    In []: 8/2\n",
-    "    Out[]: 4.0\n",
+    "    In [ ]: 8/2\n",
+    "    Out[ ]: 4.0\n",
     "    \n",
     "Note: When writing complex expressions, it is often helpful (and/or necessary) to include parentheses. These work exactly as in our regular mathematical notation: \n",
     "\n",
-    "    In []: (8+2)/5\n",
-    "    Out[]: 2.0\n",
+    "    In [ ]: (8+2)/5\n",
+    "    Out[ ]: 2.0\n",
     "\n",
     "You can also include spaces between numbers and operators to make the expression more readable."
    ]
@@ -93,20 +93,20 @@
     "\n",
     "**TODO**\n",
     "\n",
-    "#### 1.2. Strings and data types\n",
+    "#### 1.2. Strings and data types <a name=\"string\"></a>\n",
     "\n",
     "In the Preparation section we mentioned that you can consider a string as something akin to a piece of text. More accurately, a string (**`str`** in Python) is a *sequence of characters*. It is one of the basic *data types*, and for obvious reasons, one that we as students of LT are very interested in. Another basic data type would be **`int`**, representing integer numbers. You already worked with `ints` above when you did some math. We will introduce more data types along the way; for now, let's make sure the difference between `str` and `int` is clear.\n",
     "\n",
     "As you saw above, `strs` are surrounded by double quotation marks (in fact single quotes work too):\n",
     "\n",
-    "    Option 1:    city = \"Berlin\"\n",
-    "    Option 2:    city = 'Berlin'\n",
+    "    Option 1:    in [ ]: city = \"Berlin\"\n",
+    "    Option 2:    in [ ]: city = 'Berlin'\n",
     "    \n",
     "`ints`, however, are written as plain numbers, without quotation marks, or anything else for that matter. \n",
     "\n",
     "    year = 2049\n",
     "    \n",
-    "**Ex 1.2.1** Run the cell below and inspect the output. What went wrong? Correct the code and you might figure out the meaning of life (and see why it's important to keep in mind the distinction between `strs` and `ints`)"
+    "**Ex 1.2.1** Run the cell below and inspect the output. What went wrong? Correct the code and you might figure out the meaning of life (and see why it's important to keep in mind the distinction between `strs` and `ints`)."
    ]
   },
   {
@@ -115,8 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paradise = \"1984\"\n",
-    "(300 + 404 + paradise)/64"
+    "year = \"1984\"\n",
+    "(300 + 404 + year)/64"
    ]
   },
   {
