--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -7,9 +7,9 @@
     "# Semantics and pragmatics, KIK-LG103\n",
     "## Lab session 1\n",
     "\n",
-    "The purpose of this lab is to learn the basics of Python programming. Some of the exercises will be general in nature (as in not directly related to language technology), but try to always relate the programming concepts to what we learned during the first LT lecture.\n",
+    "In this lab we will explore the connections between natural and programming languages using the Python programming language. Try to always relate the programming concepts to what you know about linguistic semantics.\n",
     "\n",
-    "The following concepts will be introduced in this lab:\n",
+    "The following programming concepts will be introduced in this lab:\n",
     "\n",
     "* [Variables and assignment](#vars)\n",
     "* [Strings](#string)\n",
@@ -57,15 +57,15 @@
     "    *    Multiplication\n",
     "    /    Division\n",
     "    \n",
-    "Try out some calculations on the cell below. Write the expression you want to evaluate and press `Ctrl + Enter` to execute. You should see something like this:\n",
+    "Try out some calculations in the cell below. Write the expression you want to evaluate and press `Ctrl + Enter` to execute. You should see something like this:\n",
     "\n",
-    "    In [ ]: 8/2\n",
-    "    Out[ ]: 4.0\n",
+    "    In [1]: 8/2\n",
+    "    Out[1]: 4.0\n",
     "    \n",
     "Note: When writing complex expressions, it is often helpful (and/or necessary) to include parentheses. These work exactly as in our regular mathematical notation: \n",
     "\n",
-    "    In [ ]: (8+2)/5\n",
-    "    Out[ ]: 2.0\n",
+    "    In [2]: (8+2)/5\n",
+    "    Out[2]: 2.0\n",
     "\n",
     "You can also include spaces between numbers and operators to make the expression more readable."
    ]
@@ -120,9 +120,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The link between a variable and its identifier is arbitrary, that is, the contents are not necessarily reflected in the form. Does this sound familiar to a linguist? \n",
+    "The link between the contents and the identifier is arbitrary, that is, the contents are not necessarily reflected in the form. Does this sound familiar to a linguist? \n",
     "\n",
-    "Think of the pronouns. In one context the pronoun 'it' might refer to a car (\"Did you crash it?\"), in others to a cat (\"It's cute, isn't it?\"). The form 'it' has nothing to do with what a car looks like or how it functions. The same is true of variables. The name of the variable can be almost anything (excluding most special characters and some reserved words like **if** and **and**). Also, we might first assign the variable one value (\"Cathy\") and later change it to another (\"Newman\").\n",
+    "Leäts illustrate variables with a familiar example. Think of the pronouns. In one context the pronoun 'it' might refer to a car (\"Did you crash it?\"), in others to a cat (\"It's cute, isn't it?\"). The form 'it' has nothing to do with what a car looks like or how it functions. The same is true of variables. The name of the variable can be almost anything (excluding most special characters and some reserved words like **if** and **and**). Also, we might first assign the variable one value (\"Cathy\") and later change it to another (\"Newman\").\n",
     "\n",
     "---\n",
     "\n",
@@ -130,6 +130,8 @@
     "    \n",
     "    Cathy\n",
     "    Newman\n",
+    "    \n",
+    "See the code cell above for how assignment and printing was done.\n",
     "    \n",
     "---"
    ]
@@ -152,9 +154,10 @@
     "    in [ ]: 2 + 2\n",
     "    out[ ]: 4\n",
     "\n",
-    "We can also assign a numeric value to some variable and then use that in place of numbers in calculations. Let's assume we have initialized the variable `number` a value of `2`:\n",
+    "We can also assign a numeric value to some variable and then use that in place of numbers in calculations:\n",
     "\n",
-    "    in [ ]: number + 3\n",
+    "    in [ ]: number = 2\n",
+    "            number + 3\n",
     "    out[ ]: 5\n",
     "    \n",
     "---\n",
@@ -188,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What's the benefit of using the first variable in the assignment of the second variable? Why don't we just hard-code the right values explicitly? You might want to try changing the value of `'your_age'` to figure this out."
+    "What's the benefit of using the first variable in the assignment of the second variable? Why don't we just hard-code the right values? (For example, `your_age = 10` and `my_age = 20`) You might want to try changing the value of `'your_age'` to figure this out."
    ]
   },
   {
@@ -197,7 +200,7 @@
    "source": [
     "#### 1.2 Strings and data types <a name=\"string\"></a>\n",
     "\n",
-    "In the Preparation section we mentioned that you can consider a string as something akin to a piece of text. More accurately, a string is a *sequence of characters*. It is one of the basic *data types*, and for obvious reasons, one that we as students of LT are very interested in. Another basic data type would be **`int`**, representing integer numbers. You already worked with ints above when you did some math. We will introduce more data types along the way; for now, let's make sure the difference between strings and ints is clear.\n",
+    "In the Preparation section we mentioned that you can consider a string as something akin to a piece of text. More accurately, a string is a *sequence of characters*. It is one of the basic *data types*, and for obvious reasons, one that we as students of LT are very interested in. Another basic data type would be **`int`**, representing integer numbers. You already worked with ints above when you tried calculating things. We will introduce more data types along the way; for now, let's make sure the difference between strings and ints is clear.\n",
     "\n",
     "As you saw above, strings are surrounded by double quotation marks (in fact single quotes work too):\n",
     "\n",
@@ -211,6 +214,8 @@
     "---\n",
     "\n",
     "**Ex 1.2.1** Run the cell below and inspect the output. What went wrong? Correct the code and you might figure out the meaning of life (and see why it's important to keep in mind the distinction between strings and ints).\n",
+    "\n",
+    "Note: **str** means the string type.\n",
     "\n",
     "---"
    ]
@@ -276,6 +281,7 @@
    "source": [
     "print(\"What's your name?\")\n",
     "\n",
+    "# Initialize the variable 'you' here\n",
     "\n",
     "print(\"I am talking to\", you)"
    ]
@@ -288,7 +294,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 1.2.4** Run the first cell below. In the second code cell, change the variable '`abrahams_age`' from string to `int` and try to figure out how to print out the same text as in the first cell. You might have to discard the whole variable '`sentence`' (or alternatively figure out what the function `str()` does if you feed it an integer).\n",
+    "**Ex 1.2.4** Run the first cell below. In the second code cell, change the variable '`abrahams_age`' from string to int and try to figure out how to print out the same text as in the first cell. You might have to discard the whole variable '`sentence`' (or alternatively figure out what the function `str()` does if you feed it an integer).\n",
     "\n",
     "---"
    ]
@@ -308,6 +314,9 @@
     "# Another variable containing the sentence,\n",
     "# a concatenation of two strings\n",
     "sentence = \"Abraham died at age \" + abrahams_age\n",
+    "\n",
+    "# After concatenation the content of 'sentence' is:\n",
+    "# \"Abraham died at age 175\"\n",
     "\n",
     "# Here we print the variable containing the\n",
     "# whole sentence\n",
@@ -369,7 +378,7 @@
     "if person_name == \"Uvuvwevwe\" and person_is_ex:\n",
     "    print(\"Ignoring.\")\n",
     "else:\n",
-    "    print(\"Hi Uvuvwevwe!\")"
+    "    print(\"Hi \" + person_name + \"!\")"
    ]
   },
   {
@@ -406,6 +415,14 @@
    },
    "outputs": [],
    "source": [
+    "# Notice that we do not always have to assign\n",
+    "# the value we want to print to a variable and then\n",
+    "# pass the variable to the print function. The print statement\n",
+    "# below is a shorter way of writing:\n",
+    "#     \n",
+    "#     is_different = (\"John\" != \"Maggie\")  # The parentheses are here for clarity\n",
+    "#     print(is_different)                  # and not actually necessary.\n",
+    "#\n",
     "print(\"John\" != \"Maggie\")\n",
     "\n",
     "print(3 < 2)"
@@ -434,7 +451,7 @@
    },
    "outputs": [],
    "source": [
-    "(\"John\" == \"Maggie\") or (not (3 < 2) and (\"a\" != \"b\"))"
+    "(\"John\" == \"Maggie\") or (not (3 <= 2) and (\"a\" != \"b\"))"
    ]
   },
   {
@@ -450,7 +467,9 @@
     "    else:\n",
     "        do that\n",
     "        \n",
-    "Written in this \"pseudo-Python\", the construction is probably clear to you. Imagine yourself being in control of the execution of the code (using your favorite flow metaphor). You get to the line starting with `if` and evaluate whatever expression comes after it. If the expression is `True`, you continue to the code between the `if` and the `else` lines, otherwise you skip that part and continue after `else`.\n",
+    "Written in this \"pseudo-Python\", the construction is probably clear to you. Imagine yourself being in control of the execution of the code. You get to the line starting with `if` and evaluate whatever expression comes after it. If the expression is `True`, you continue to the code between the `if` and the `else` lines, otherwise you skip that part and continue after `else`.\n",
+    "\n",
+    "The whitespace (four spaces) is used to mark what block of code belongs under the `if` branch and which belongs under the `else` branch of the construction. This is called **block indentation**.\n",
     "\n",
     "\n",
     "Sometimes we need more flexibility in our actions instead of just a binary choice: *if this - do this, if that - do that, if that third thing - do something funny, otherwise - do whatever you want*. In Python this can be accomplished with **elif** (from else-if): \n",
@@ -471,7 +490,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TODO: EX HERE ABOUT IF-ELIF-ELSE"
+    "**Ex 2.3.1** Write an if-statement with at least four branches (see last example above) that prints out reactions to different foods. For example, if the variable food is \"cucumber\", you could print out \"Yummy!\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "food = \"cucumber\"\n",
+    "\n",
+    "if food == \"eggplant\":\n",
+    "    print(\"Meh.\")\n",
+    "# ...and so on"
    ]
   },
   {
@@ -492,24 +526,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Donatello is a good name, I like it!\n",
-      "Leonardo is a good name, I like it!\n",
-      "Michelangelo is a good name, I like it!\n",
-      "Raphael is a good name, I like it!\n",
-      "Splinter is a good name, I like it!\n",
-      "It looks like we had 5 names there.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_names = [\"Raphael\", \"Leonardo\", \"Donatello\", \"Michelangelo\", \"Splinter\"]\n",
     "all_names_sorted = sorted(all_names)\n",
@@ -531,7 +553,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 3.1.1** Experiment with sorting and the equivalence of lists in the code cell below.\n",
+    "**Ex 3.1.1** Experiment with sorting and the equivalence of lists in the code cell below. You can also change the contents of the lists to strings instead of ints.\n",
     "\n",
     "---"
    ]
@@ -556,7 +578,7 @@
     "    for thing in list:\n",
     "        do the thing\n",
     "        \n",
-    "The for-loop above works in a simple way:\n",
+    "As you might notice, the for-loop corresponds to the logical \"for all\", universal quantifier **$\\forall$** that we saw in the lecture. The for-loop above works in a simple way:\n",
     "\n",
     "    1. Go to the start of the list\n",
     "    2. Assign the value of the element in current position to the variable 'thing'\n",
@@ -591,7 +613,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 3.1.2** Below you are given a list of characters that make up a magic word. Use a for-loop and string concatenation (\"+\" from section 1.2) to construct the word. In other words, find a way to go from a list of characters to a single string consisting of those characters: `[\"a\", \"b\", \"c\"] ==> \"abc\"`. Look at how the number was incremented in the code cell above for inspiration.\n",
+    "**Ex 3.1.2** Below you are given a list of characters that make up a magic word. Use a for-loop and string concatenation (\"+\" from section 1.2) to construct the word. In other words, find a way to go from a list of characters to a single string consisting of those characters: `[\"a\", \"b\", \"c\"] ==> \"abc\"`. Look at how the number was incremented in the code cell above for inspiration (`number = number + n`).\n",
     "\n",
     "---"
    ]
@@ -616,42 +638,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we used the function `len` to calculate the length of the list. `len` can also be used with string and sets:"
+    "Finally, we used the function `len` to calculate the length of the list. `len` can also be used with strings:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The length of the word is 11 characters.\n",
-      "It looks like there are 3 different pizzas in the set.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = \"Capricciosa\"\n",
-    "print(\"The length of the word is\", len(word), \"characters.\")\n",
-    "\n",
-    "pizzas = {\"Quattro Stagioni\", \"Funghi\", \"Napolitana\"}\n",
-    "print(\"It looks like there are\", len(pizzas), \"different pizzas in the set.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "**Ex 3.1.3** You are given a small text as a list. Calculate how many times the word '*the*' appears in the text. You need to use a few of the introduced concepts here: the for loop, string comparison (\"a\" != \"b\"), the if-statement and the incrementing of an integer shown a few code cells above.\n",
-    "\n",
-    "---"
+    "print(\"The length of the word is\", len(word), \"characters.\")"
    ]
   },
   {
@@ -755,6 +755,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that the `len` function we saw earlier can be used with sets too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pizzas = {\"Quattro Stagioni\", \"Funghi\", \"Napolitana\"}\n",
+    "print(\"It looks like there are\", len(pizzas), \"different pizzas in the set.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Section 4: Indexing and slicing <a name=\"slice\"></a>"
    ]
   },
@@ -840,7 +859,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "inclusion, exclusion; implicit \"from the start\" or \"to the end\"; negatives also; remind of similarity between strings and lists"
+    "With slicing, we can access a part longer than one element of a list or a string. For example, in the first print statement above we access the second and third letters of the word using `word[1:3]`. As you might notice, picking the right indices here is an error-prone process. First of all, we must remember that the indexing starts from 0, so the index of the second element is 1. Second, in the construction for slicing `[startindex:endindex]`, the `endindex` is **exclusive**, that is, the element in that index is not taken into account. The `startindex` is inclusive, however. In other words, `word[1:3]` means '*the substring of `word` from index 1 (inclusive) to index 3 (exclusive)*'.\n",
+    "\n",
+    "In the second and third print statements we see that only the starting or ending index is given. If the starting index is missing, the slicing implicitly starts from the beginning of the string. If the ending index is missing, the slicing is inferred to extend to the end of the string. We can also use negative indices in slicing."
    ]
   },
   {
